[package]
name = "dungeon"
version = "0.0.1"
authors = [
    "Chris Ohk <utilforever@gmail.com>",
    "Namkyu Park <lak9348@gmail.com>",
    "Jongun Jeong <skeep194@knu.ac.kr>"
]
edition = "2018"
description = "The Dungeon Toolkit written in Rust"

readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
